--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#collage" style="text-decoration: none;" class="navlink">About 28onthe28</a>
         <a href="#Trends" style="text-decoration: none;" class="navlink">Trends</a>
         
-        <a href="" style="text-decoration: none;" class="navlink" id="quizzes">Quiz</a>
+        <a href="https://abbygamboa.github.io/quiz/" style="text-decoration: none;" class="navlink" id="quizzes">Quiz</a>
         
     </nav> 
 
